uncomment some of the code

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -75,8 +75,8 @@
 
     <!-- [Page Specific JS] start -->
 
-    {% comment %} <script src="{% static 'js/plugins/apexcharts.min.js' %}"></script> {% endcomment %}
-    {% comment %} <script src="{% static 'js/pages/dashboard-default.js' %}"></script> {% endcomment %}
+    {% comment %} <script src="{% static 'js/plugins/apexcharts.min.js' %}"></script>
+    <script src="{% static 'js/pages/dashboard-default.js' %}"></script> {% endcomment %}
     <!-- [Page Specific JS] end -->
     <!-- Required Js -->
      
@@ -84,9 +84,9 @@
     <script src="{% static 'js/plugins/simplebar.min.js' %}"></script>
     <script src="{% static 'js/plugins/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/fonts/custom-font.js' %}"></script>
-    {% comment %} <script src="{% static 'js/pcoded.js' %}"></script> {% endcomment %}
+    <script src="{% static 'js/pcoded.js' %}"></script>
     <script src="{% static 'js/plugins/feather.min.js' %}"></script>
-    {% comment %} <script>
+    <script>
       layout_change('light')
     </script>
 
@@ -104,7 +104,7 @@
 
     <script>
       font_change('Public-Sans')
-    </script> {% endcomment %}
+    </script> {
   </body>
   <!-- [Body] end -->
 </html>
